[package]
name = "tcp-mirror"
version = "0.1.0"
authors = ["Esa Varemo <esa@kuivanto.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6.5", features = ["codec"] }
futures = "0.3"
futures-channel = "0.3.14"
structopt = "0.3"
thiserror = "1"
bytes = "1.0.1"